--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'Use ophub script to package Armvirt as OpenWrt'
-author: 'ophub'
+author: 'xopenwrt'
 description: 'Package Armvirt as OpenWrt. Support Amlogic s9xxx tv box.'
 inputs:
   mode:
@@ -53,7 +53,7 @@ runs:
         echo -e "PACKAGED_STATUS: success"
         echo -e "PACKAGED_OUTPUTPATH files list:"
         echo -e "$(ls ${PWD}/out 2>/dev/null) \n"
-
+        mv out/* ${GITHUB_WORKSPACE}/openwrt/bin/targets/*/*/
 branding:
   icon: 'terminal'
   color: 'gray-dark'
